<resources>
  <string name="app_name">Koloro</string>
  <string name="preferences_label">Preferences</string>
  <string name="show_notification_label">Show notification</string>
  <string name="capture_button_visible_label">Capture button visible</string>
  <string name="start_capture_button">Start Overlay</string>
  <string name="store_captures_label">Retain screenshots</string>
  <string name="notification_title">Koloro: Ready to capture screen</string>
  <string name="notification_text">Use overlay buttons to continue</string>
  <string name="notification_ticker">Overlay started</string>
  <string name="multi_shot_label">Multi-shot</string>
  <string name="copy_button">Copy</string>
  <string name="capture_method_label">Capture method</string>
  <string name="preference_spinner_onscreen_button">Onscreen button</string>
  <string name="cancel_overlay_description">Close overlay</string>
  <string name="capture_screen_description">Capture screen</string>
  <string name="copied_clipboard_toast">Copied to clipboard</string>
  <string name="screen_capture_toast">Capturing screen. Please wait…</string>
  <string name="save_button">Save</string>
  <string name="note_button">Note</string>
  <string name="cancel_button">Cancel</string>
  <string name="saved_color_note_title">Saved Color Note</string>
  <string name="note_hint">Type a note</string>
  <string name="saved_colors_button">Saved Colors</string>
  <string name="capture_button_position">Capture button position</string>
  <string name="vibration_label">Vibration</string>

  <string name="ad_app_id">ca-app-pub-6855808991220674~3673032548</string>
  <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
  <string name="banner_ad_unit_id_prod">ca-app-pub-6855808991220674/5149765749</string>

  <string name="help_intro">One two three four five six</string>
  <string name="help_home">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis metus vel mi porta, id egestas lectus commodo. Nunc at gravida odio. Nulla gravida massa interdum, dapibus risus sit amet, pharetra diam. Maecenas gravida finibus turpis condimentum porttitor. Phasellus interdum dolor sed eros laoreet, in ornare nisi imperdiet. Nullam ut pretium nisl. Aliquam congue ultrices purus, sed bibendum ipsum condimentum ac. Nullam pellentesque tincidunt sodales. Vivamus mattis tellus sit amet mi gravida vulputate. Ut at laoreet velit. Integer at leo ut risus fermentum euismod. Curabitur eget purus aliquet libero congue vulputate vitae sit amet massa.

Pellentesque malesuada rutrum imperdiet. Suspendisse efficitur quam consequat lectus fringilla, non bibendum leo eleifend. Cras et sem consequat, rhoncus ipsum vitae, convallis ligula. Cras tempus molestie quam, sit amet congue est congue non. Morbi eget eros luctus, semper nibh a, posuere metus. Ut lobortis quam purus, aliquet interdum urna vestibulum vitae. Duis egestas leo massa, ac sodales urna cursus fermentum. Integer vitae sodales justo, a rutrum nunc. Nulla vel massa ac leo consectetur semper feugiat dapibus elit. Phasellus sollicitudin eros ac fermentum suscipit.

</string>
  <string name="help_overlay">One two three four five six</string>
  <string name="help_picker">One two three four five six</string>
  <string name="help_preferences">One two three four five six</string>
  <string name="help_premium">One two three four five six</string>
  <string name="help_one_title">Welcome to Koloro 1</string>
  <string name="help_one_description">This is page one</string>
  <string name="help_two_title">Welcome to Koloro 2</string>
  <string name="help_two_description">The overlay will stay displayed over all apps. [capture] to capture the current screen. [x] to cancel</string>
  <string name="help_three_title">Welcome to Koloro 3</string>
  <string name="help_three_description">This is page three</string>
  <string name="help_four_title">Welcome to Koloro 4</string>
  <string name="help_four_description">This is page four</string>
  <string name="quick_launch_label">Quick Launch</string>
  <string name="overlay_already_launched_message">Overlay already launched</string>
  <string name="color_format_label">Color format</string>
  <string name="upgrade_button_text">Activate premium features</string>
  <string name="saved_toast">Saved</string>
  <string name="zoom_enabled_label">Zoom Enabled</string>

  <string name="tooltip_quick_launch">Quick Launch will launch the Koloro overlay without the home screen...</string>
  <string name="tooltip_enable_zoom">When enabled, hold two fingers on the captured image to activate zoom, then select the area to zoom. Hit the back button to return to the original capture</string>
  <string name="tooltip_retain_screenshots">When enabled, screenshots captured with Koloro will be saved to your device gallery</string>
  <string name="tooltop_vibration">When enabled, the device will vibrate when the screen is captured</string>

  <string name="saved_colors">SAVED COLORS</string>
  <string name="menu_item_preferences">Preferences</string>
  <string name="menu_item_share">Share saved colors</string>
  <string name="menu_item_clear">Clear saved colors</string>
  <string name="zoom_toast_text">Select area to zoom into</string>
  <string name="copied_text_toast">Copied text</string>

  <string-array name="capture_button_position_array">
    <item>Top right</item>
    <item>Top left</item>
  </string-array>

  <string-array name="color_format_array">
    <item>Hex</item>
    <item>RGB</item>
  </string-array>


</resources>
