<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal">
    <TextView
        style="@style/PrefsText"
        android:text="@string/capture_button_position"/>
    <Spinner
        android:id="@+id/spinner_capture_button_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:popupBackground="@color/colorPrimary"
        android:gravity="end"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      >

    <TextView
        style="@style/PrefsText"
        android:text="@string/vibration_label"/>

    <Switch
        android:id="@+id/switch_vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal">
    <TextView
        style="@style/PrefsText"
        android:text="@string/store_captures_label"
        />
    <Switch
        android:id="@+id/switch_store_captures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal">
    <TextView
        style="@style/PrefsText"
        android:text="@string/color_format_label"/>
    <Spinner
        android:id="@+id/spinner_color_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:popupBackground="@color/colorPrimary"
        android:gravity="end"
        />
  </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <FrameLayout
        android:id="@+id/quick_launch_overlay"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <LinearLayout
        android:id="@+id/quick_launch_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
      <TextView
          android:id="@+id/quick_launch_label"
          style="@style/PrefsText"
          android:text="@string/quick_launch_label"
          />
      <Switch
          android:id="@+id/switch_quick_launch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <FrameLayout
        android:id="@+id/zoom_enabled_overlay"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <LinearLayout
        android:id="@+id/zoom_enabled_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
      <TextView
          android:id="@+id/zoom_enabled_label"
          style="@style/PrefsText"
          android:text="@string/zoom_enabled_label"
          />
      <Switch
          android:id="@+id/switch_zoom_enabled"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>
  </RelativeLayout>



</LinearLayout>